# app-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build-linux.sh  build-win32.bat  build_linux.sh  build_win32.bat  project.4coder
src/: event.h  main.c  platform.c  platform.h  types.h  vector.h  window.c  window.h
